--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@
   -webkit-text-size-adjust: 100%;
 }
 
+#root{
+  padding: 0;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -27,7 +31,6 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
